# RingCLI

./: .gitignore  AGENT.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  Cargo.toml  README.md  README_EN.md
crates/linkkit-parser/: Cargo.toml  INTEGRATION.md  README.md
crates/linkkit-parser/examples/: demo.rs
crates/linkkit-parser/src/: error.rs  executor.rs  gate.rs  lib.rs  output.rs  parser.rs  tags.rs
crates/linkkit-parser/src/json/: agent.rs  ask.rs  bash.rs  doc.rs  event.rs  file.rs  mod.rs  summary.rs  todo.rs  tool.rs
crates/neko-cli/: Cargo.toml
crates/neko-cli/src/: args.rs  bootstrap.rs  connect.rs  lib.rs  main.rs  mcp_manager.rs  print_mode.rs
crates/neko-cli/src/agent/: system_prompt.rs
crates/neko-cli/src/config/: mod.rs
crates/neko-cli/src/rca/: mod.rs  protocol.rs
crates/neko-cli/src/repl/: commands.rs  file_complete.rs  mod.rs
crates/neko-cli/src/sdk/: mod.rs
crates/neko-cli/src/server/: mod.rs
crates/neko-cli/src/tui/: app.rs  theme.rs
crates/neko-cli/src/tui/widgets/: chat.rs  input.rs  markdown.rs  mod.rs  mode_picker.rs  model_picker.rs  permission.rs  provider_setup.rs  session_picker.rs  welcome.rs
crates/neko-cli/src/tui/widgets/core/: scroll_list.rs
crates/neko-cli/tests/: bootstrap_test.rs
crates/neko-core/: Cargo.toml
crates/neko-engine/: Cargo.toml
crates/neko-engine/src/agent/: context.rs  executor.rs  mod.rs  orchestrator.rs  plan.rs  spawn.rs  system_prompt.rs  turn.rs
crates/neko-mcp/: Cargo.toml
crates/neko-mcp/src/: client.rs  prompts.rs  protocol.rs  transport.rs
crates/neko-providers/: Cargo.toml
crates/neko-providers/src/: catalog.rs  factory.rs  provider.rs  providers.json
crates/neko-providers/src/providers/: claude_code.rs  compatible.rs  mod.rs  openai.rs
crates/neko-providers/src/providers/added/: mod.rs
crates/neko-providers/src/providers/added/baidu/: mod.rs
crates/neko-providers/src/providers/added/cerebras/: mod.rs
crates/neko-providers/src/providers/added/cohere/: mod.rs
crates/neko-providers/src/providers/added/deepinfra/: mod.rs
crates/neko-providers/src/providers/added/deepseek/: mod.rs
crates/neko-providers/src/providers/added/fireworks/: mod.rs
crates/neko-providers/src/providers/added/groq/: mod.rs
crates/neko-providers/src/providers/added/lmstudio/: mod.rs
crates/neko-providers/src/providers/added/mistral/: mod.rs
crates/neko-providers/src/providers/added/moonshot/: mod.rs
crates/neko-providers/src/providers/added/nvidia/: mod.rs
crates/neko-providers/src/providers/added/ollama/: mod.rs
crates/neko-providers/src/providers/added/openrouter/: mod.rs
crates/neko-providers/src/providers/added/perplexity/: mod.rs
crates/neko-providers/src/providers/added/siliconflow/: mod.rs
crates/neko-providers/src/providers/added/together/: mod.rs
crates/neko-providers/src/providers/added/xai/: mod.rs
crates/neko-providers/src/providers/added/zhipu/: mod.rs
crates/neko-providers/src/providers/anthropic/: mod.rs
crates/neko-providers/src/providers/gemini/: mod.rs
crates/neko-providers/src/providers/openai/: mod.rs  oauth.rs
crates/neko-skills/: Cargo.toml
crates/neko-skills/src/: loader.rs
crates/neko-tools/: Cargo.toml
crates/neko-tools/src/: builtin.rs  lib.rs  register.rs
crates/neko-tools/src/tools/: bash.rs  set_mode.rs  shell.rs
crates/ring-cli/: Cargo.toml
crates/ring-cli/src/: args.rs  bootstrap.rs  config_watch.rs  connect.rs  lib.rs  main.rs  mcp_manager.rs  print_mode.rs
crates/ring-cli/src/config/: mod.rs
crates/ring-cli/src/rca/: mod.rs
crates/ring-cli/src/repl/: cmd.rs  commands.rs  file_complete.rs  history.rs  mod.rs  printer.rs
crates/ring-cli/src/sdk/: mod.rs
crates/ring-cli/src/server/: mod.rs
crates/ring-cli/src/tui/: app.rs  layout.rs  mod.rs  theme.rs
crates/ring-cli/src/tui/widgets/: chat.rs  effort_picker.rs  logout_picker.rs  markdown.rs  mod.rs  mode_picker.rs  model_picker.rs  permission.rs  provider_setup.rs  refresh_model_picker.rs  settings_picker.rs  status.rs  suggestions.rs  tasks.rs  welcome.rs
crates/ring-cli/src/tui/widgets/core/: mod.rs  scroll_list.rs
crates/ring-cli/tests/: bootstrap_test.rs
crates/ring-core/: Cargo.toml
crates/ring-core/benches/: string_allocation.rs  tool_registry.rs
crates/ring-core/src/: image.rs  lib.rs
crates/ring-core/src/agent/: mod.rs
crates/ring-core/src/config/: mod.rs
crates/ring-core/src/events/: mod.rs
crates/ring-core/src/permissions/: mod.rs
crates/ring-core/src/runtime/: mod.rs
crates/ring-core/src/session/: compression.rs  db.rs  loop_state.rs  memory.rs  mod.rs  paths.rs  todos.rs
crates/ring-core/src/skills/: mod.rs
crates/ring-core/src/tools/: builtin.rs  hybrid.rs  mod.rs
crates/ring-engine/: Cargo.toml
crates/ring-engine/src/: lib.rs
crates/ring-engine/src/agent/: context.rs  executor.rs  orchestrator.rs  permission.rs  plan.rs  spawn.rs  system_prompt.rs  tool_preview.rs  turn.rs
crates/ring-providers/: Cargo.toml
crates/ring-providers/examples/: test_catalog.rs  test_debug.rs  test_factory.rs  test_load_full.rs  test_neko_simple.rs  test_register.rs
crates/ring-providers/src/: catalog.rs  error.rs  factory.rs  lib.rs  models_dev.rs  provider.rs  registry.rs
crates/ring-providers/src/providers/: mod.rs
crates/ring-providers/src/providers/added/: mod.rs
crates/ring-providers/src/providers/added/ant_ling/: mod.rs
crates/ring-providers/src/providers/added/baidu/: mod.rs
crates/ring-providers/src/providers/added/cerebras/: mod.rs
crates/ring-providers/src/providers/added/cloudflare_gateway/: mod.rs
crates/ring-providers/src/providers/added/cloudflare_workers/: mod.rs
crates/ring-providers/src/providers/added/cohere/: mod.rs
crates/ring-providers/src/providers/added/deepinfra/: mod.rs
crates/ring-providers/src/providers/added/deepseek/: mod.rs
crates/ring-providers/src/providers/anthropic/: claude_code.rs  mod.rs
crates/ring-providers/src/providers/compatible/: mod.rs
crates/ring-providers/src/providers/gemini/: mod.rs
crates/ring-providers/src/providers/openai/: mod.rs  oauth.rs  responses.rs
(+77 files in other folders)
