[workspace]
resolver = "2"
default-members = ["crates/neko-cli"]
members = [
    "crates/neko-core",
    "crates/neko-providers",
    "crates/neko-tools",
    "crates/neko-mcp",
    "crates/neko-skills",
    "crates/neko-engine",
    "crates/neko-cli",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "AGPL-3.0-only"
authors     = ["Ringaire玲汐"]

[workspace.dependencies]
# 异步
tokio          = { version = "1", features = ["full"] }
tokio-util     = { version = "0.7" }
tokio-stream   = { version = "0.1", features = ["sync"] }
futures-util   = { version = "0.3", default-features = false, features = ["std"] }

# 序列化
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

# 错误处理
thiserror      = "2"
anyhow         = "1"

# HTTP
reqwest        = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tower-http     = { version = "0.6", features = ["cors", "trace"] }

# TUI
ratatui        = { version = "0.30", features = ["crossterm"] }
crossterm      = { version = "0.29", features = ["event-stream"] }
tui-markdown   = { version = "0.3", default-features = false }

# CLI
clap           = { version = "4", features = ["derive", "env"] }

# 工具库
uuid           = { version = "1", features = ["v4", "serde"] }
chrono         = { version = "0.4", features = ["serde"] }
dirs           = "6"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender   = "0.2"
async-trait    = "0.1"
once_cell      = "1"
parking_lot    = "0.12"
arc-swap       = "1"
regex          = "1"
globset        = "0.4"
ignore         = "0.4"
walkdir        = "2"
similar        = "3"
unicode-width  = "0.2"
tempfile       = "3"
rand           = "0.9"
bytes          = "1"
notify         = "6"
base64         = "0.22"
axum           = { version = "0.8", features = ["ws"] }
tokio-tungstenite = "0.24"

# crate 内部依赖
neko-core      = { path = "crates/neko-core" }
neko-providers = { path = "crates/neko-providers" }
neko-tools     = { path = "crates/neko-tools" }
neko-mcp       = { path = "crates/neko-mcp" }
neko-skills    = { path = "crates/neko-skills" }

[profile.dev]
opt-level = 0
debug     = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level       = 3
lto             = "fat"
codegen-units   = 1
strip           = true
debug           = false
