[package]
name        = "neko-cli"
description = "NekoCode CLI 入口、TUI 界面（ratatui）、REPL、Agent turn 循环"
version.workspace = true
edition     = "2021"
license.workspace = true

[[bin]]
name = "neko"
path = "src/main.rs"

[dependencies]
neko-core      = { workspace = true }
neko-engine    = { path = "../neko-engine" }
neko-providers = { workspace = true }
neko-tools     = { workspace = true }
neko-mcp       = { workspace = true }
neko-skills    = { workspace = true }
tokio          = { workspace = true }
tokio-stream   = { workspace = true }
tokio-util     = { workspace = true }
async-trait    = { workspace = true }
futures-util   = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
anyhow         = { workspace = true }
clap           = { workspace = true }
ratatui        = { workspace = true }
tui-markdown   = { workspace = true }
crossterm      = { workspace = true }
uuid           = { workspace = true }
ignore         = { workspace = true }
chrono         = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender   = { workspace = true }
unicode-width  = { workspace = true }
pulldown-cmark = "0.13"
parking_lot    = { workspace = true }
notify         = { workspace = true }
axum           = { workspace = true }
tower-http     = { workspace = true }
tokio-tungstenite = { workspace = true }
