[package]
name = "neko-engine"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true

[dependencies]
tokio        = { workspace = true }
tokio-util   = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
serde_json   = { workspace = true }
futures-util = { workspace = true }
chrono       = { workspace = true }
async-trait  = { workspace = true }
anyhow       = { workspace = true }
notify       = { workspace = true }
once_cell    = { workspace = true }
dirs         = { workspace = true }

neko-core      = { path = "../neko-core" }
neko-providers = { path = "../neko-providers" }
neko-tools     = { path = "../neko-tools" }
neko-skills    = { path = "../neko-skills" }
neko-mcp       = { path = "../neko-mcp" }
