[package]
name = "neko-engine"
description = "NekoCode 执行引擎：Agent turn 循环、工具调度、会话管理"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio        = { workspace = true }
tokio-util   = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
serde_json   = { workspace = true }
futures-util = { workspace = true }
chrono       = { workspace = true }
async-trait  = { workspace = true }
anyhow       = { workspace = true }
notify       = { workspace = true }
dirs         = { workspace = true }

neko-core      = { workspace = true }
neko-providers = { workspace = true }
neko-tools     = { workspace = true }
neko-skills    = { workspace = true }
neko-mcp       = { workspace = true }
