[package]
name        = "neko-mcp"
description = "MCP 协议客户端：stdio 和 SSE 传输，工具桥接"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
neko-core    = { workspace = true }
parking_lot  = { workspace = true }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
reqwest      = { workspace = true }
async-trait  = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
