[package]
name        = "neko-providers"
description = "LLM Provider 适配层：Anthropic、OpenAI、Gemini、OpenAI-Compatible"
version.workspace = true
edition     = "2021"
license.workspace = true

[dependencies]
neko-core    = { workspace = true }
tokio        = { workspace = true }
tokio-stream = { workspace = true }
tokio-util   = { workspace = true }
futures-util = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
reqwest      = { workspace = true }
async-trait  = { workspace = true }
tracing      = { workspace = true }
base64       = { workspace = true }
uuid         = { workspace = true }
bytes        = { workspace = true }
sha2         = "0.10"
rand         = { workspace = true }
url          = "2"
chrono       = { workspace = true }
