[package]
name        = "neko-skills"
description = "技能注册系统：技能接口、注册表、MCP 工具转技能"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
neko-core    = { workspace = true }
neko-mcp     = { workspace = true }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
parking_lot  = { workspace = true }
