[package]
name        = "ring-cli"
description = "RingCLI — 终端 AI 编程助手，TUI 界面（ratatui）、REPL、Agent turn 循环"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ring"
path = "src/main.rs"

[dependencies]
ring-core      = { workspace = true }
ring-engine    = { workspace = true }
ring-providers = { workspace = true }
ring-tools     = { workspace = true }
ring-mcp       = { workspace = true }
ring-skills    = { workspace = true }
tokio          = { workspace = true }
tokio-stream   = { workspace = true }
tokio-util     = { workspace = true }
async-trait    = { workspace = true }
futures-util   = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
anyhow         = { workspace = true }
clap           = { workspace = true }
ratatui        = { workspace = true }
crossterm      = { workspace = true }
uuid           = { workspace = true }
ignore         = { workspace = true }
chrono         = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender   = { workspace = true }
unicode-width  = { workspace = true }
pulldown-cmark = { workspace = true }
parking_lot    = { workspace = true }
notify         = { workspace = true }
axum           = { workspace = true }
tower-http     = { workspace = true }
tokio-tungstenite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
