[package]
name        = "ring-core"
description = "RingCode 核心类型、trait、事件总线、权限引擎、会话存储、配置加载"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio        = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
dirs         = { workspace = true }
tracing      = { workspace = true }
parking_lot  = { workspace = true }
arc-swap     = { workspace = true }
tokio-util   = { workspace = true }
async-trait  = { workspace = true }

[dev-dependencies]
criterion    = { workspace = true }

[[bench]]
name = "tool_registry"
harness = false

[[bench]]
name = "string_allocation"
harness = false
