[package]
name = "ring-engine"
description = "RingCode 执行引擎：Agent turn 循环、工具调度、会话管理"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio        = { workspace = true }
tokio-util   = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
serde_json   = { workspace = true }
futures-util = { workspace = true }
chrono       = { workspace = true }
async-trait  = { workspace = true }
anyhow       = { workspace = true }
notify       = { workspace = true }
dirs         = { workspace = true }

ring-core      = { workspace = true }
ring-providers = { workspace = true }
ring-tools     = { workspace = true }
ring-skills    = { workspace = true }
ring-mcp       = { workspace = true }
